# splash-userservice

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test_build.yml
alshub/: service.py
scripts/: test_user.py
splash_userservice/: api.py  models.py
