[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splash-userservice"
version = "0.0.1.dev0"
description = "API for defining users and groups at scientific user facilities"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Dylan McReynolds", email = "dmcreynolds@lbl.gov"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "certifi",
    "httpx==0.17.*",
    "pydantic",
    "starlette",
    "typer",
]

dynamic = []

[project.optional-dependencies]
dev = [
    "codecov",
    "coverage",
    "flake8",
    "pytest",
    "sphinx",
    "ipython",
    "matplotlib",
    "numpydoc",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
]

[dependency-groups]
dev = [
    "codecov",
    "coverage",
    "flake8",
    "pytest",
    "sphinx",
    "ipython",
    "matplotlib",
    "numpydoc",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
]

[project.urls]
Repository = "https://github.com/als-computing/splash-userservice"
Documentation = "https://splash-userservice.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["splash_userservice", "alshub"]

[tool.pytest.ini_options]
testpaths = ["splash_userservice/tests", "alshub/tests"]
addopts = "-v"

[tool.coverage.run]
source = ["splash_userservice", "alshub"]
omit = [
    "*/tests/*",
    "*/conftest.py",
]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
ignore = ["E203", "W503"]
